tests/cases/patterns/ok/pattern-ref-mut-ownership-vector-dynamic-suffix.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn borrow_last(flag: bool) -> i64 {
  var values: Vec[own i64] = if flag {
    [make_owned(1)]
  } else {
    [make_owned(2), make_owned(3)]
  };
  {
    let ref mut [.., last] = values;
  }
  drop values;
  return 0;
}

fn main() -> i64 {
  return borrow_last(true) + borrow_last(false);
}
